argocd/applications/template/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: CHANGE_APP_IDENTIFIER
  labels:
    app: CHANGE_APP_IDENTIFIER

spec:
  replicas: 1
  selector:
    matchLabels:
      app: CHANGE_APP_IDENTIFIER
  template:
    metadata:
      labels:
        app: CHANGE_APP_IDENTIFIER
    spec:
      containers:
        - name: CHANGE_APP_IDENTIFIER
          image: "CHANGE_IMAGE_REF"
          ports:
            - name: web
              containerPort: CHANGE_PORT_NUMBER
